@@ -1,0 +1,29 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/point2play/point2play-1.1.ebuild,v 1.1 2003/07/16 03:13:41 vapier Exp $
+
+MY_P=${PN}-small-${PV}
+DESCRIPTION="graphical frontend for WineX"
+HOMEPAGE="http://www.transgaming.com/"
+SRC_URI="${MY_P}.tgz"
+
+LICENSE="Aladdin"
+SLOT="3"
+KEYWORDS="x86"
+RESTRICT="fetch"
+
+RDEPEND="virtual/x11
+         >=dev-lang/python-2.0
+         >=dev-python/pygtk-1.99.16
+         >=x11-themes/gtk-engines-metal-2.2.0"
+
+pkg_nofetch() {
+	einfo "Please download the appropriate Point2Play archive (${MY_P}.tgz)"
+	einfo "from ${HOMEPAGE} (requires a Transgaming subscription)"
+	echo
+	einfo "The archive should then be placed into ${DISTDIR}"
+}
+
+src_install() {
+	mv ${WORKDIR}/usr ${D}
+}
